Didn't like how the top of the page looked, so I changed it; also changed pricing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/musical-note-music.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Saxophone and cello lessons for beginner and intermediate players" />
-    <meta name="keywords" content="cello lesson, saxophone lesson, beginner, intermediate" />
+    <meta name="description" content="Online saxophone and cello lessons for beginner and intermediate players" />
+    <meta name="keywords" content="cello lesson, saxophone lesson, beginner, intermediate, online saxophone lessons, online cello lessons" />
     <meta name="author" content="Zion Griffin" />
     <title>Griffin Winds & Strings</title>
   </head>
